fix bugs in own kernel part

--- a/2024-feb-02-webinar/Webinar_Julia.ipynb
+++ b/2024-feb-02-webinar/Webinar_Julia.ipynb
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "id": "7ba5cf8c-cc0a-4634-90de-1df0dac5204f",
    "metadata": {},
    "outputs": [],
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "id": "30c7ace8-fad4-4738-addd-55155e4aa649",
    "metadata": {},
    "outputs": [
@@ -1024,7 +1024,7 @@
        "Metal.HostKernel{typeof(vadd!), Tuple{MtlDeviceVector{Float32, 1}, MtlDeviceVector{Float32, 1}, MtlDeviceVector{Float32, 1}}}(vadd!, Metal.MTL.MTLComputePipelineStateInstance (object of type AGXG14GFamilyComputePipeline))"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,20 +1047,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "id": "d516a9d7-391c-470e-b5b8-0b1353320224",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching MtlArray(::Type{Float32}, ::Vector{Float64})",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching MtlArray(::Type{Float32}, ::Vector{Float64})",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[53]:7"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length of matrix A = 512\n"
      ]
     }
    ],
@@ -1071,10 +1066,12 @@
     "    return\n",
     "end\n",
     "\n",
-    "A, B = MtlArray(ones(Float32, 2^9)*2), MtlArray(Float32, ones(2^9)*3);\n",
+    "A = MtlArray(Float32.(ones(Float32, 2^9)*2));\n",
+    "B = MtlArray(Float32.(ones(Float32, 2^9)*3));\n",
     "C = similar(A);\n",
     "\n",
     "N = length(A)\n",
+    "println(\"length of matrix A = \", N)\n",
     "@metal threads=N vadd!(C, A, B)\n",
     "\n",
     "@assert all(Array(C) .== 5.0)"
@@ -1092,20 +1089,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 86,
    "id": "7fb4eef2-a5de-4ff2-a766-939dc13f1954",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: `ROCArray` not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `ROCArray` not defined",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[23]:9"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nthreads = 128, numblocks = 4\n"
      ]
     }
    ],
@@ -1118,15 +1110,16 @@
     "    return\n",
     "end\n",
     "\n",
-    "A, B = ROCArray(ones(2^9)*2), ROCArray(ones(2^9)*3);\n",
+    "A = MtlArray(Float32.(ones(Float32, 2^9)*2));\n",
+    "B = MtlArray(Float32.(ones(Float32, 2^9)*3));\n",
     "C = similar(A);\n",
     "\n",
-    "nthreads = 256\n",
-    "# smallest integer larger than or equal to length(A)/threads\n",
+    "nthreads = 128\n",
     "numblocks = cld(length(A), nthreads)\n",
+    "println(\"nthreads = \", nthreads, \", numblocks = \", numblocks)\n",
     "\n",
-    "# run using 256 threads\n",
-    "@metal threads=nthreads grid=numblocks vadd!(C, A, B)\n",
+    "# run using 128 threads\n",
+    "@metal threads=nthreads groups=numblocks vadd!(C, A, B)\n",
     "\n",
     "@assert all(Array(C) .== 5.0)"
    ]
@@ -1190,22 +1183,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 143,
    "id": "08c71ea0-f659-46b4-b7ba-0a92057ddbc6",
    "metadata": {},
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "MethodError: no method matching +(::Vector{Int64}, ::Int64)\nFor element-wise addition, use broadcasting with dot syntax: array .+ scalar\n\n\u001b[0mClosest candidates are:\n\u001b[0m  +(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4moperators.jl:578\u001b[24m\u001b[39m\n\u001b[0m  +(\u001b[91m::T\u001b[39m, ::T) where T<:Union{Int128, Int16, Int32, Int64, Int8, UInt128, UInt16, UInt32, UInt64, UInt8}\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mint.jl:87\u001b[24m\u001b[39m\n\u001b[0m  +(\u001b[91m::Union{InitialValues.NonspecificInitialValue, InitialValues.SpecificInitialValue{typeof(+)}}\u001b[39m, ::Any)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[36mInitialValues\u001b[39m \u001b[90m~/.julia/packages/InitialValues/OWP8V/src/\u001b[39m\u001b[90m\u001b[4mInitialValues.jl:154\u001b[24m\u001b[39m\n\u001b[0m  ...\n",
+     "evalue": "DimensionMismatch: layer Dense(1 => 1) expects size(input, 1) == 1, but got 100-element Vector{Int64}",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching +(::Vector{Int64}, ::Int64)\nFor element-wise addition, use broadcasting with dot syntax: array .+ scalar\n\n\u001b[0mClosest candidates are:\n\u001b[0m  +(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4moperators.jl:578\u001b[24m\u001b[39m\n\u001b[0m  +(\u001b[91m::T\u001b[39m, ::T) where T<:Union{Int128, Int16, Int32, Int64, Int8, UInt128, UInt16, UInt32, UInt64, UInt8}\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mint.jl:87\u001b[24m\u001b[39m\n\u001b[0m  +(\u001b[91m::Union{InitialValues.NonspecificInitialValue, InitialValues.SpecificInitialValue{typeof(+)}}\u001b[39m, ::Any)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[36mInitialValues\u001b[39m \u001b[90m~/.julia/packages/InitialValues/OWP8V/src/\u001b[39m\u001b[90m\u001b[4mInitialValues.jl:154\u001b[24m\u001b[39m\n\u001b[0m  ...\n",
+      "DimensionMismatch: layer Dense(1 => 1) expects size(input, 1) == 1, but got 100-element Vector{Int64}",
       "",
       "Stacktrace:",
-      " [1] +(::Vector{Int64}, ::Int64, ::Vector{Float64})",
-      "   @ Base ./operators.jl:578",
-      " [2] top-level scope",
-      "   @ In[24]:7"
+      " [1] _size_check(layer::Dense{typeof(identity), Matrix{Float32}, Vector{Float32}}, x::Vector{Int64}, ::Pair{Int64, Int64})",
+      "   @ Flux ~/.julia/packages/Flux/u7QSl/src/layers/basic.jl:195",
+      " [2] (::Dense{typeof(identity), Matrix{Float32}, Vector{Float32}})(x::Vector{Int64})",
+      "   @ Flux ~/.julia/packages/Flux/u7QSl/src/layers/basic.jl:171",
+      " [3] top-level scope",
+      "   @ In[143]:13"
      ]
     }
    ],
@@ -1216,27 +1211,39 @@
     "# Generate some random data\n",
     "Random.seed!(42)\n",
     "X = rand(1:10, 100)\n",
-    "y = 2X + 1 + 0.1*randn(100)\n",
+    "Y = 2X .+ 1 + 0.1*randn(100)\n",
     "\n",
     "# Define a linear regression model\n",
     "model = Dense(1, 1)\n",
     "\n",
     "# Define a loss function (mean squared error)\n",
-    "loss(x, y) = sum((model(x) .- y).^2)\n",
+    "loss = sum((model(X) .- Y).^2)\n",
+    "println(loss)\n",
     "\n",
     "# Define an optimizer (Stochastic Gradient Descent)\n",
     "opt = Descent(0.01)\n",
     "\n",
+    "\n",
     "# Training loop\n",
     "for _ in 1:1000\n",
-    "    Flux.train!(loss, Flux.params(model), [(X, y)], opt)\n",
+    "    Flux.train!(loss, Flux.params(model), [(X, Y)], opt)\n",
     "end\n",
     "\n",
+    "#=\n",
     "# Predict using the trained model\n",
     "new_X = 5.0\n",
     "predicted_y = model([new_X])\n",
-    "println(\"Predicted value for $new_X: $predicted_y\")"
+    "println(\"Predicted value for $new_X: $predicted_y\")\n",
+    "=#"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff8fa371-6037-4b1d-aa40-8b3488c1bde7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
