reduce number of methods of sumsquare, for simplicity

--- a/2024-feb-02-webinar/Webinar_Julia.ipynb
+++ b/2024-feb-02-webinar/Webinar_Julia.ipynb
@@ -405,17 +405,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "23aebcb5-71df-4e60-811a-a111c881af9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sumsquare (generic function with 3 methods)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sumsquare(x::Float64, y::Float64) = x^2 + y^2\n",
-    "sumsquare(x::Float64, y::Int64) = x^2 + y^2\n",
-    "sumsquare(x::Int64, y::Float64) = x^2 + y^2\n",
     "sumsquare(x::Int64, y::Int64) = x^2 + y^2\n",
-    "\n",
-    "sumsquare(x::Complex{Int64}, y::Complex{Int64}) = x^2 + y^2\n",
     "sumsquare(x::Complex{Float64}, y::Complex{Float64}) = x^2 + y^2"
    ]
   },
@@ -431,10 +438,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "13975166-0ddc-46ff-bfd7-20fd0cbd6452",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "22.067300000000003\n",
+      "-1.689999999999999 - 0.7800000000000011im\n"
+     ]
+    }
+   ],
    "source": [
     "# Passing arguments with all kinds of types to this function\n",
     "\n",
@@ -444,9 +461,6 @@
     "# Float64\n",
     "println(sumsquare(2.72, 3.83))\n",
     "    \n",
-    "# Complex{Int64}\n",
-    "println(sumsquare(1+2im, 3-4im))\n",
-    "        \n",
     "# Complex{Float64}\n",
     "println(sumsquare(1.2+2.3im, 2.1-1.5im))"
    ]
