--- a/2024-feb-02-webinar/Webinar_Python.ipynb
+++ b/2024-feb-02-webinar/Webinar_Python.ipynb
@@ -1344,7 +1344,10 @@
   {
    "cell_type": "markdown",
    "id": "9f815954-bc61-4264-a157-f23011dc52e7",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### 4.2 `ufunc` and `gufunc`\n",
     "\n",
@@ -1502,12 +1505,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b4733df6-a6aa-4972-9ef4-69d604d3cfeb",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35.7 ms ± 11.5 ms per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "[1.04842086 1.05058338 1.41651116 ... 0.93062768 0.32513397 1.0718969 ]\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit func.forall(len(a))(a, b, c)\n",
     "print(c.copy_to_host())"
@@ -1515,12 +1527,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "590c1cde-0d10-4643-bc60-0d4f66ad7d5b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36.2 ms ± 9.12 ms per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "[1.04842086 1.05058338 1.41651116 ... 0.93062768 0.32513397 1.0718969 ]\n"
+     ]
+    }
+   ],
    "source": [
     "nthreads = 256  # Enough threads per block for several warps per block\n",
     "nblocks = (len(a) // nthreads) + 1 # Enough blocks to cover entire vector\n",
