--- a/2024-feb-02-webinar/Webinar_Python.ipynb
+++ b/2024-feb-02-webinar/Webinar_Python.ipynb
@@ -48,6 +48,7 @@
    "cell_type": "markdown",
    "id": "a56cce2a-ce7e-4eab-947c-38fce97c6e29",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "f5384d75-b9c5-4cf9-9212-19bcc8c0de9d",
    "metadata": {
     "tags": []
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "f00b3bca-9c3d-4335-b794-2bd5d7271b96",
    "metadata": {
     "tags": []
@@ -87,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.34 ms ± 26.4 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "2.32 ms ± 46.1 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "40ac5f0b-b658-4f6e-bc99-f1599cbfe025",
    "metadata": {
     "tags": []
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "86469330-2d6c-4328-9660-bd94a21b8485",
    "metadata": {
     "tags": []
@@ -123,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.64 µs ± 101 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "5.63 µs ± 10.7 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "703be7b6-58ed-4a0e-991e-23f57a9d50a6",
    "metadata": {
     "tags": []
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "16f6731d-54fa-4c5f-8045-157af6659ecc",
    "metadata": {
     "tags": []
@@ -179,7 +180,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "570222e7-2d00-4429-a152-5567739ac3f9",
    "metadata": {
     "tags": []
@@ -200,13 +201,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.13550442, 0.67563482, 0.78628862, 0.68840005],\n",
-       "       [0.53692041, 0.05124353, 0.37778244, 0.60697287],\n",
-       "       [0.63768248, 0.59825478, 0.24508919, 0.423485  ],\n",
-       "       [0.20077715, 0.44925051, 0.66964286, 0.97140862]])"
+       "array([[8.76462129e-01, 4.79262726e-01, 5.79184004e-01, 8.24023244e-01],\n",
+       "       [5.73107265e-01, 2.93336067e-01, 2.15971355e-04, 6.94377269e-01],\n",
+       "       [3.02716025e-01, 8.04359286e-01, 4.64275880e-01, 4.77690312e-01],\n",
+       "       [7.43448122e-01, 4.42166183e-01, 5.79440614e-01, 1.65150947e-01]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "cab88137-9c85-4f38-8205-4aba812afcac",
    "metadata": {
     "tags": []
@@ -237,13 +238,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.13550442,  1.67563482,  2.78628862,  3.68840005],\n",
-       "       [ 4.53692041,  5.05124353,  6.37778244,  7.60697287],\n",
-       "       [ 8.63768248,  9.59825478, 10.24508919, 11.423485  ],\n",
-       "       [12.20077715, 13.44925051, 14.66964286, 15.97140862]])"
+       "array([[ 0.87646213,  1.47926273,  2.579184  ,  3.82402324],\n",
+       "       [ 4.57310727,  5.29333607,  6.00021597,  7.69437727],\n",
+       "       [ 8.30271602,  9.80435929, 10.46427588, 11.47769031],\n",
+       "       [12.74344812, 13.44216618, 14.57944061, 15.16515095]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "f2d7221d-50fd-4e03-93d1-58bd52848e40",
    "metadata": {
     "tags": []
@@ -278,13 +279,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.        ,  0.67563482,  1.57257725,  2.06520016],\n",
-       "       [ 2.14768163,  0.25621764,  2.26669465,  4.24881012],\n",
-       "       [ 5.10145981,  5.38429302,  2.45089191,  4.65833498],\n",
-       "       [ 2.40932579,  5.84025658,  9.37500011, 14.57112927]])"
+       "array([[0.00000000e+00, 4.79262726e-01, 1.15836801e+00, 2.47206973e+00],\n",
+       "       [2.29242906e+00, 1.46668033e+00, 1.29582813e-03, 4.86064088e+00],\n",
+       "       [2.42172820e+00, 7.23923357e+00, 4.64275880e+00, 5.25459343e+00],\n",
+       "       [8.92137747e+00, 5.74816038e+00, 8.11216859e+00, 2.47726421e+00]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "0e97f178-08d1-4dd0-a69e-82c768eadb93",
    "metadata": {
     "tags": []
@@ -305,13 +306,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 2.41461681,  2.59550461,  2.87688942,  4.36816873],\n",
-       "       [ 8.45815461,  9.69303914, 11.19210191, 15.1292349 ],\n",
-       "       [14.50169241, 16.79057367, 19.5073144 , 25.89030108],\n",
-       "       [20.54523021, 23.8881082 , 27.82252689, 36.65136725]])"
+       "array([[ 3.40888368,  3.22855319,  2.66708957,  2.14521073],\n",
+       "       [13.39181785, 11.30505023,  9.15955545, 10.79017782],\n",
+       "       [23.37475201, 19.38154728, 15.65202132, 19.43514491],\n",
+       "       [33.35768618, 27.45804433, 22.1444872 , 28.080112  ]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,6 +325,7 @@
    "cell_type": "markdown",
    "id": "4635d344-dbfd-422e-9df8-de40df77a1ed",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -350,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "e5a44bd7-6ead-4cc1-bc3e-2e8eeffcdf7f",
    "metadata": {
     "tags": []
@@ -365,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "98b97f1b-c2ed-413b-89ea-821425dd170a",
    "metadata": {
     "tags": []
@@ -536,7 +538,7 @@
        "Allen, Mr. William Henry                             NaN        S  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "00129b17-39b8-45e6-9304-0ec3a7f85483",
    "metadata": {
     "tags": []
@@ -588,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "62b37dbc-524c-42a2-a883-bfb83897ed33",
    "metadata": {
     "tags": []
@@ -731,7 +733,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "6a46d590-bbef-45d7-92dc-1d9a533ed7a6",
    "metadata": {
     "tags": []
@@ -769,6 +771,7 @@
    "cell_type": "markdown",
    "id": "eb254fe5-6f18-4051-862e-f227900a0c0b",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -795,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "ae24276b-9446-44cc-960b-53a6f253ddaf",
    "metadata": {
     "tags": []
@@ -804,10 +807,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d3283aac40>"
+       "<matplotlib.legend.Legend at 0x2178a04ab50>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -859,7 +862,6 @@
    "cell_type": "markdown",
    "id": "94ad36e6-843f-42e9-87cd-890eb6730c4b",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -891,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "6e9dc711-dd0b-4c26-a9be-99d57608f019",
    "metadata": {
     "tags": []
@@ -934,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "861e6adc-abe2-4553-97a2-f0cb70aab1b2",
    "metadata": {
     "tags": []
@@ -944,8 +946,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time consumed by numpy:  0.6339607238769531\n",
-      "Time consumed by cupy :  0.424196720123291\n"
+      "Time consumed by numpy:  0.5974147319793701\n",
+      "Time consumed by cupy :  0.2991800308227539\n"
      ]
     }
    ],
@@ -977,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "f640996c-69ff-4c6c-a946-6c16f649a258",
    "metadata": {
     "tags": []
@@ -993,7 +995,7 @@
        "       [20., 21., 22., 23., 24.]], dtype=float32)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "27e7a34b-e550-4532-a884-714d6a43b501",
    "metadata": {},
    "outputs": [
@@ -1031,7 +1033,7 @@
        "       [40., 42., 44., 46., 48.]], dtype=float32)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "6e4f986d-ba5e-4022-9136-2875a5098102",
    "metadata": {},
    "outputs": [],
@@ -1120,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "c34591de-1678-4f17-81c1-6e45f0504637",
    "metadata": {
     "tags": []
@@ -1130,10 +1132,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.5247092  -0.13215747  0.2759774   0.6050976 ]\n",
-      " [-2.2686203   1.0732539   0.32439858  0.11120763]\n",
-      " [ 0.62387365  1.9502647   0.26942044 -0.5310957 ]\n",
-      " [ 0.17158005  0.23350821  0.36936978  0.4525003 ]]\n"
+      "[[-1.2685821  -0.3611091  -1.4023727  -1.0236768 ]\n",
+      " [-1.2545078  -0.36995667  2.0073714   1.4256687 ]\n",
+      " [ 0.04622831  0.77614206  0.32193184 -0.9405473 ]\n",
+      " [ 0.53677475  0.22941536  0.57099575  0.13525864]]\n"
      ]
     }
    ],
@@ -1155,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "34b741e9-f8a5-45f4-933b-54ac94e55069",
    "metadata": {},
    "outputs": [],
@@ -1179,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "id": "499403ed-3144-49b4-9d4f-2d32996aae2d",
    "metadata": {},
    "outputs": [
@@ -1187,15 +1189,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.0494184  -0.26431495  0.5519548   1.2101952 ]\n",
-      " [-4.5372405   2.1465077   0.64879715  0.22241525]\n",
-      " [ 1.2477473   3.9005294   0.5388409  -1.0621914 ]\n",
-      " [ 0.3431601   0.46701643  0.73873955  0.9050006 ]] \n",
+      "[[-2.5371642  -0.7222182  -2.8047454  -2.0473535 ]\n",
+      " [-2.5090156  -0.73991334  4.014743    2.8513374 ]\n",
+      " [ 0.09245662  1.5522841   0.6438637  -1.8810946 ]\n",
+      " [ 1.0735495   0.4588307   1.1419915   0.2705173 ]] \n",
       "\n",
-      " [[-0.5247092  -0.13215747  0.2759774   0.6050976 ]\n",
-      " [-2.2686203   1.0732539   0.32439858  0.11120763]\n",
-      " [ 0.62387365  1.9502647   0.26942044 -0.5310957 ]\n",
-      " [ 0.17158005  0.23350821  0.36936978  0.4525003 ]]\n"
+      " [[-1.2685821  -0.3611091  -1.4023727  -1.0236768 ]\n",
+      " [-1.2545078  -0.36995667  2.0073714   1.4256687 ]\n",
+      " [ 0.04622831  0.77614206  0.32193184 -0.9405473 ]\n",
+      " [ 0.53677475  0.22941536  0.57099575  0.13525864]]\n"
      ]
     }
    ],
@@ -1210,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "id": "2ca7fa6f-18eb-42dd-8f38-5673ae8bc40e",
    "metadata": {
     "tags": []
@@ -1220,15 +1222,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.61133105  0.23442441 -1.8691044  -1.6121689 ]\n",
-      " [ 1.392821    0.556477   -5.4471216  -2.5625272 ]\n",
-      " [-0.7909806   0.7080076   0.5349025   2.0975149 ]\n",
-      " [-0.96317977 -1.4705727  -0.8868772   1.6646254 ]] \n",
+      "[[ 2.9622035   0.78166664 -1.5227078   3.316071  ]\n",
+      " [ 0.15882413  3.781923   -1.2625875   0.3697803 ]\n",
+      " [ 4.5716634  -1.3894094   1.6411002   0.43246973]\n",
+      " [-5.0898056   0.8908439   1.9038029  -1.3339299 ]] \n",
       "\n",
-      " [[-0.30566552  0.11721221 -0.9345522  -0.80608445]\n",
-      " [ 0.6964105   0.2782385  -2.7235608  -1.2812636 ]\n",
-      " [-0.3954903   0.3540038   0.26745126  1.0487574 ]\n",
-      " [-0.48158988 -0.73528636 -0.4434386   0.8323127 ]]\n"
+      " [[ 1.4811018   0.39083332 -0.7613539   1.6580355 ]\n",
+      " [ 0.07941207  1.8909615  -0.6312938   0.18489015]\n",
+      " [ 2.2858317  -0.6947047   0.8205501   0.21623486]\n",
+      " [-2.5449028   0.44542196  0.95190144 -0.66696495]]\n"
      ]
     }
    ],
@@ -1248,6 +1250,7 @@
    "cell_type": "markdown",
    "id": "354e1228-ff31-4e30-b09f-5a2dd5c52ab9",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1265,16 +1268,25 @@
   {
    "cell_type": "markdown",
    "id": "e9369520-37a7-4854-b07e-f0854d59a818",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 4.1 `numba.jit()` decorator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cea443ba-cb39-4e3a-92c5-2bdd46e52961",
    "metadata": {},
    "source": [
-    "### 4.1 `numba.jit()` decorator\n",
-    "\n",
     "Numba provides several utilities for code generation, and its central feature is the `numba.jit()` decorator."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "id": "480e4a76-9f9e-4fc0-97d7-cac700faa4a4",
    "metadata": {
     "tags": []
@@ -1284,7 +1296,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "102 µs ± 2.85 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "103 µs ± 1.79 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -1314,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "id": "55dc71d6-a839-4046-8fc7-d50106e6e38f",
    "metadata": {
     "tags": []
@@ -1324,7 +1336,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.23 µs ± 6.56 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "The slowest run took 4.73 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "5.84 µs ± 4.76 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -1349,8 +1362,14 @@
     "tags": []
    },
    "source": [
-    "### 4.2 `ufunc` and `gufunc`\n",
-    "\n",
+    "### 4.2 `ufunc` and `gufunc`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5c338a0-719d-4192-8931-d3ff31c1e274",
+   "metadata": {},
+   "source": [
     "Another feature of Numba is to generate NumPy universal functions.\n",
     "\n",
     "There are two types of universal functions:\n",
@@ -1410,7 +1429,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.91 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+      "5.82 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
      ]
     }
    ],
@@ -1432,8 +1451,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "289 ms ± 571 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "201 ms ± 29.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "286 ms ± 759 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "155 ms ± 7.38 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -1460,6 +1479,7 @@
    "cell_type": "markdown",
    "id": "9df1be16-0607-45b1-b7b5-624d087411a7",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1468,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "1f771a27-ca6c-4f89-a58a-3dbea92e0015",
    "metadata": {
     "tags": []
@@ -1490,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "b5bf61f2-e62f-45be-a1f2-ca016833855e",
    "metadata": {
     "tags": []
@@ -1505,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "b4733df6-a6aa-4972-9ef4-69d604d3cfeb",
    "metadata": {
     "tags": []
@@ -1515,8 +1535,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35.7 ms ± 11.5 ms per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
-      "[1.04842086 1.05058338 1.41651116 ... 0.93062768 0.32513397 1.0718969 ]\n"
+      "6.28 ms ± 66.3 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "[0.72475498 0.69843303 1.22497107 ... 1.35823682 0.97623205 0.62099263]\n"
      ]
     }
    ],
@@ -1527,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "590c1cde-0d10-4643-bc60-0d4f66ad7d5b",
    "metadata": {
     "tags": []
@@ -1537,8 +1557,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36.2 ms ± 9.12 ms per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
-      "[1.04842086 1.05058338 1.41651116 ... 0.93062768 0.32513397 1.0718969 ]\n"
+      "6.24 ms ± 2.71 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "[0.72475498 0.69843303 1.22497107 ... 1.35823682 0.97623205 0.62099263]\n"
      ]
     }
    ],
