--- a/2024-feb-02-webinar/Webinar_Julia.ipynb
+++ b/2024-feb-02-webinar/Webinar_Julia.ipynb
@@ -482,13 +482,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p1, p2 = Point(1.0, 2.0), Point(2.0, 3.0)\n",
-    "\n",
     "function sumsquare(p1::Point, p2::Point)\n",
     "   return Point(p1.x^2 + p2.x^2, p1.y^2 + p2.y^2)\n",
     "end\n",
     "\n",
-    "sumsquare(p1, p2)  \n"
+    "p1, p2 = Point(1.0, 2.0), Point(2.0, 3.0)\n",
+    "sumsquare(p1, p2)  "
    ]
   },
   {
@@ -638,7 +637,7 @@
    "source": [
     "## The Array interface\n",
     "\n",
-    "GPU programming with Julia can be as simple as using a different array type instead of regular Base.\n",
+    "GPU programming with Julia can be as simple as using a different array type instead of regular Base.Array. \n",
     "\n",
     "For Apple M-series GPUs, it should use `MtlArray` from `Metal.jl`."
    ]
@@ -670,7 +669,6 @@
    "outputs": [],
    "source": [
     "# A code example for matrix multiplication\n",
-    "\n",
     "using BenchmarkTools\n",
     "using Metal\n",
     "\n",
@@ -697,16 +695,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# an example of vector addition kernel for Apple GPU\n",
-    "\n",
     "function vadd!(C, A, B)\n",
     "    for i in 1:length(A)\n",
     "        @inbounds C[i] = A[i] + B[i]\n",
     "    end\n",
     "end\n",
     "\n",
-    "A = zeros(10) .+ 5.0;\n",
-    "B = ones(10);\n",
+    "A = zeros(10) .+ 3.0;\n",
+    "B = ones(10) .* 2;\n",
     "C = similar(B);\n",
     "vadd!(C, A, B)"
    ]
@@ -718,10 +714,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# an example of vector addition kernel for Apple GPU\n",
+    "\n",
     "A_d = MtlArray(Float32.(A));\n",
     "B_d = MtlArray(Float32.(B));\n",
     "C_d = similar(B_d);\n",
     "\n",
+    "# WARNING: the kernel above is not suitable for launching on GPUs\n",
     "@metal vadd!(C_d, A_d, B_d)"
    ]
   },
@@ -730,7 +729,15 @@
    "id": "7ea45a38-18b5-4844-9c4e-ffb5f160af06",
    "metadata": {},
    "source": [
-    "**NOTE**: the performance would be terrible because each thread on the GPU would be performing the same loop! So we have to remove the loop over all elements and instead use the special `threadIdx` and `blockDim` functions, analogous respectively to `threadid` and `nthreads` for multithreading."
+    "**NOTE**: the *performance is terrible* for the code above, because each thread on the GPU is performing the same loop! To split work among the GPU cores, we have to remove the loop over all elements and instead use special functions which, when called by each GPU thread, return a unique index. For Metal.jl we use `thread_position_in_grid_1d()`, while the corresponding function for CUDA.jl is `threadIdx()`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4885832d-ca2f-447b-a553-8faa4fa75d76",
+   "metadata": {},
+   "source": [
+    "![](https://enccs.github.io/julia-for-hpc/_images/MappingBlocksToSMs.png)"
    ]
   },
   {
@@ -740,6 +747,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# replacing for-loop with thread_position_in_grid_1d()\n",
     "function vadd!(C, A, B)\n",
     "    index = thread_position_in_grid_1d()\n",
     "    @inbounds C[index] = A[index] + B[index]\n",
@@ -762,9 +770,9 @@
    "id": "cbb9f340-2cf8-4900-b6c4-9cebbb0d1c6a",
    "metadata": {},
    "source": [
-    "However, this implementation will not scale up to arrays that are larger than the maximum number of threads in a block! We can find out how many threads are supported on the GPU we are using:\n",
+    "However, this implementation will not work for arrays that are larger than the maximum number of threads in a block - try increasing the size to `2^12`! \n",
     "\n",
-    "Clearly, GPUs have a limited number of threads they can run on a single SM. To parallelise over multiple SMs we need to run a kernel with multiple blocks where we also take advantage of the `blockDim()` and `blockIdx()` functions (in the case of NVIDIA)."
+    "Clearly, GPUs have a limited number of threads they can run on a single SM. To parallelise over multiple SMs we need to run a kernel with multiple blocks where we also take advantage of the `blockDim()` and `blockIdx()` functions (in the case of NVIDIA). Here's how it looks for CUDA.jl:"
    ]
   },
   {
@@ -774,24 +782,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this example is for CUDA.jl (requires CUDA-compatible NVIDIA GPUs)\n",
     "function vadd!(C, A, B)\n",
-    "    i = thread_position_in_grid_1d()\n",
+    "    i = threadIdx().x + (blockIdx().x - 1) * blockDim().x\n",
     "    if i <= length(A)\n",
     "        @inbounds C[i] = A[i] + B[i]\n",
     "    end\n",
     "    return\n",
     "end\n",
     "\n",
-    "A = MtlArray(Float32.(ones(Float32, 2^9)*2));\n",
-    "B = MtlArray(Float32.(ones(Float32, 2^9)*3));\n",
+    "A, B = CuArray(ones(2^9)*2), CuArray(ones(2^9)*3);\n",
     "C = similar(A);\n",
     "\n",
-    "nthreads = 128\n",
+    "nthreads = 256\n",
+    "# smallest integer larger than or equal to length(A)/threads\n",
     "numblocks = cld(length(A), nthreads)\n",
     "println(\"nthreads = \", nthreads, \", numblocks = \", numblocks)\n",
     "\n",
-    "# run using 128 threads\n",
-    "@metal threads=nthreads groups=numblocks vadd!(C, A, B)\n",
+    "# run using 256 threads\n",
+    "@cuda threads=nthreads blocks=numblocks vadd!(C, A, B)\n",
     "\n",
     "@assert all(Array(C) .== 5.0)"
    ]
