--- a/2024-feb-02-webinar/Webinar_Julia.ipynb
+++ b/2024-feb-02-webinar/Webinar_Julia.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# 1. Introduction to Julia"
+    "# Short tour of Julia for GPU programming and Machine Learning"
    ]
   },
   {
