--- a/2024-oct-24-python/Webinar_Python.ipynb
+++ b/2024-oct-24-python/Webinar_Python.ipynb
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "a = list(range(10000))\n",
-    "b = [ 0 ] * 10000"
+    "b = [0] * 10000"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "source": [
     "%%timeit\n",
     "for i in range(len(a)):\n",
-    "  b[i] = a[i]**2"
+    "    b[i] = a[i] ** 2"
    ]
   },
   {
@@ -105,6 +105,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
     "a = np.arange(10000)\n",
     "b = np.zeros(10000)"
    ]
@@ -127,7 +128,7 @@
    ],
    "source": [
     "%%timeit\n",
-    "b = a ** 2"
+    "b = a**2"
    ]
   },
   {
@@ -156,11 +157,11 @@
     }
    ],
    "source": [
-    "a = np.array([1,2,3])               # 1-dimensional array (rank 1)\n",
-    "b = np.array([[1,2,3],[4,5,6]])     # 2-dimensional array (rank 2)\n",
+    "a = np.array([1, 2, 3])  # 1-dimensional array (rank 1)\n",
+    "b = np.array([[1, 2, 3], [4, 5, 6]])  # 2-dimensional array (rank 2)\n",
     "\n",
-    "print(b.shape)                      # the shape (rows,columns)\n",
-    "print(b.size)                       # number of elements"
+    "print(b.shape)  # the shape (rows,columns)\n",
+    "print(b.size)  # number of elements"
    ]
   },
   {
@@ -247,7 +248,7 @@
     }
    ],
    "source": [
-    "c = np.add(a, b) # = a+b\n",
+    "c = np.add(a, b)  # = a+b\n",
     "c"
    ]
   },
@@ -315,7 +316,7 @@
     }
    ],
    "source": [
-    "np.dot(a, b) # equals to `a @ b`"
+    "np.dot(a, b)  # equals to `a @ b`"
    ]
   },
   {
@@ -358,7 +359,7 @@
     "import pandas as pd\n",
     "\n",
     "url = \"https://raw.githubusercontent.com/pandas-dev/pandas/master/doc/data/titanic.csv\"\n",
-    "titanic = pd.read_csv(url, index_col='Name')"
+    "titanic = pd.read_csv(url, index_col=\"Name\")"
    ]
   },
   {
@@ -824,11 +825,18 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.figure(figsize=(9,6))\n",
-    "plt.hist([titanic[titanic['Survived']==1]['Age'], titanic[titanic['Survived']==0]['Age']], \n",
-    "         stacked=True, bins=30, label=['Survived','Dead'])\n",
-    "plt.xlabel('Age (in Years)')\n",
-    "plt.ylabel('Number of passengers on Titanic')\n",
+    "plt.figure(figsize=(9, 6))\n",
+    "plt.hist(\n",
+    "    [\n",
+    "        titanic[titanic[\"Survived\"] == 1][\"Age\"],\n",
+    "        titanic[titanic[\"Survived\"] == 0][\"Age\"],\n",
+    "    ],\n",
+    "    stacked=True,\n",
+    "    bins=30,\n",
+    "    label=[\"Survived\", \"Dead\"],\n",
+    ")\n",
+    "plt.xlabel(\"Age (in Years)\")\n",
+    "plt.ylabel(\"Number of passengers on Titanic\")\n",
     "plt.legend()"
    ]
   },
@@ -941,11 +949,13 @@
     "\n",
     "mx = np.arange(10000).reshape(100, 100)\n",
     "\n",
-    "def go_slow(a): # Function is compiled and runs in machine code\n",
+    "\n",
+    "def go_slow(a):  # Function is compiled and runs in machine code\n",
     "    rst = 0.0\n",
     "    for i in range(a.shape[0]):\n",
     "        rst += np.sin(a[i, i])\n",
     "    return rst\n",
+    "\n",
     "\n",
     "%timeit go_slow(mx)"
    ]
@@ -970,12 +980,14 @@
    "source": [
     "from numba import jit\n",
     "\n",
+    "\n",
     "@jit(nopython=True)\n",
     "def go_fast(a):\n",
     "    rst = 0.0\n",
     "    for i in range(a.shape[0]):\n",
     "        rst += np.cos(a[i, i])\n",
     "    return rst\n",
+    "\n",
     "\n",
     "%timeit go_fast(mx)"
    ]
@@ -1015,17 +1027,20 @@
     "import numpy as np\n",
     "import numba\n",
     "\n",
+    "\n",
     "# a simple version without using numba\n",
     "def func_cpu(x, y):\n",
-    "    return math.pow(x, 3.0) + 4*math.sin(y)\n",
+    "    return math.pow(x, 3.0) + 4 * math.sin(y)\n",
     "\n",
-    "@numba.vectorize([numba.float64(numba.float64, numba.float64)], target='cpu')\n",
+    "\n",
+    "@numba.vectorize([numba.float64(numba.float64, numba.float64)], target=\"cpu\")\n",
     "def func_numba_cpu(x, y):\n",
-    "    return math.pow(x, 3.0) + 4*math.sin(y)\n",
+    "    return math.pow(x, 3.0) + 4 * math.sin(y)\n",
     "\n",
-    "@numba.vectorize([numba.float64(numba.float64, numba.float64)], target='cuda')\n",
+    "\n",
+    "@numba.vectorize([numba.float64(numba.float64, numba.float64)], target=\"cuda\")\n",
     "def func_numba_gpu(x, y):\n",
-    "    return math.pow(x, 3.0) + 4*math.sin(y)"
+    "    return math.pow(x, 3.0) + 4 * math.sin(y)"
    ]
   },
   {
@@ -1122,6 +1137,7 @@
     "import numpy as np\n",
     "import numba\n",
     "\n",
+    "\n",
     "@numba.cuda.jit\n",
     "def func(a, b, c):\n",
     "    # like threadIdx.x + (blockIdx.x * blockDim.x)\n",
@@ -1189,7 +1205,7 @@
    ],
    "source": [
     "nthreads = 256  # Enough threads per block for several warps per block\n",
-    "nblocks = (len(a) // nthreads) + 1 # Enough blocks to cover entire vector\n",
+    "nblocks = (len(a) // nthreads) + 1  # Enough blocks to cover entire vector\n",
     "\n",
     "%timeit func[nblocks, nthreads](a, b, c)\n",
     "print(c.copy_to_host())"
@@ -1265,7 +1281,7 @@
     "lst_cpu = np.array(lst)\n",
     "lst_gpu = cp.array(lst)\n",
     "\n",
-    "# calculate the Euclidean norm \n",
+    "# calculate the Euclidean norm\n",
     "lst_cpu_norm = np.linalg.norm(lst_cpu)\n",
     "lst_gpu_norm = cp.linalg.norm(lst_gpu)\n",
     "\n",
@@ -1302,13 +1318,13 @@
     "# speed comparison between cupy and numpy\n",
     "\n",
     "import time\n",
-    " \n",
+    "\n",
     "# NumPy and CPU Runtime\n",
     "start = time.time()\n",
     "x_cpu = np.random.random((10000, 10000))\n",
     "end = time.time()\n",
     "print(\"Time consumed by numpy: \", end - start)\n",
-    " \n",
+    "\n",
     "# CuPy and GPU Runtime\n",
     "start = time.time()\n",
     "x_gpu = cp.random.random((10000, 10000))\n",
@@ -1350,13 +1366,16 @@
    "source": [
     "import cupy as cp\n",
     "\n",
-    "add_kernel = cp.RawKernel(r'''\n",
+    "add_kernel = cp.RawKernel(\n",
+    "    r\"\"\"\n",
     "extern \"C\" __global__\n",
     "void my_add(const float* x1, const float* x2, float* y) {\n",
     "    int tid = blockDim.x * blockIdx.x + threadIdx.x;\n",
     "    y[tid] = x1[tid] + x2[tid];\n",
     "}\n",
-    "''', 'my_add')\n",
+    "\"\"\",\n",
+    "    \"my_add\",\n",
+    ")\n",
     "\n",
     "x1 = cp.arange(25, dtype=cp.float32).reshape(5, 5)\n",
     "x2 = cp.arange(25, dtype=cp.float32).reshape(5, 5)\n",
@@ -1480,9 +1499,10 @@
     "\n",
     "# 2.1: Generating numbers with single precision\n",
     "import numpy as np\n",
-    "mx_cpu = np.random.randn(4,4)\n",
+    "\n",
+    "mx_cpu = np.random.randn(4, 4)\n",
     "mx_cpu = mx_cpu.astype(np.float32)\n",
-    "print(mx_cpu, end='\\n')\n",
+    "print(mx_cpu, end=\"\\n\")\n",
     "\n",
     "# 2.2: Allocation of memory on GPU\n",
     "mx_gpu = cuda.mem_alloc(mx_cpu.nbytes)\n",
@@ -1501,18 +1521,20 @@
     "# Step 3: Executing a kernel on GPU\n",
     "\n",
     "# 3.1 Definition of the kernel\n",
-    "mod = SourceModule(\"\"\"\n",
+    "mod = SourceModule(\n",
+    "    \"\"\"\n",
     "  __global__ void doublify(float *a)\n",
     "  {\n",
     "    int idx = threadIdx.x + threadIdx.y*4;\n",
     "    a[idx] *= 2.0;\n",
     "  }\n",
-    "  \"\"\")\n",
+    "  \"\"\"\n",
+    ")\n",
     "\n",
     "# 3.2 Compile this kernel, loading it onto GPU, and then call this kernel\n",
     "func = mod.get_function(\"doublify\")\n",
     "\n",
-    "func(mx_gpu, block=(4,4,1), grid = (1,1))"
+    "func(mx_gpu, block=(4, 4, 1), grid=(1, 1))"
    ]
   },
   {
@@ -1539,11 +1561,11 @@
    ],
    "source": [
     "# Step 4: Transferring data from GPU (device) to CPU (host)\n",
-    "    \n",
+    "\n",
     "mx_doubled = np.empty_like(mx_cpu)\n",
     "cuda.memcpy_dtoh(mx_doubled, mx_gpu)\n",
     "\n",
-    "print(mx_cpu, '\\n\\n', mx_doubled)"
+    "print(mx_cpu, \"\\n\\n\", mx_doubled)"
    ]
   },
   {
@@ -1579,7 +1601,7 @@
     "mx_gpu = gpuarray.to_gpu(np.random.randn(4, 4).astype(np.float32))\n",
     "mx_doubled = (2 * mx_gpu).get()\n",
     "\n",
-    "print(mx_gpu, '\\n\\n', mx_doubled)"
+    "print(mx_gpu, \"\\n\\n\", mx_doubled)"
    ]
   }
  ],
