Run the whole notebook

--- a/2024-oct-24-python/Webinar_Python.ipynb
+++ b/2024-oct-24-python/Webinar_Python.ipynb
@@ -85,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "386 μs ± 1.94 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "2 ms ± 4.61 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.9 μs ± 84.9 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "2.76 μs ± 112 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -199,10 +199,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.31288483, 0.48250103, 0.49296229, 0.79078805],\n",
-       "       [0.83216396, 0.00675913, 0.01794232, 0.10096369],\n",
-       "       [0.28389008, 0.79925476, 0.89327217, 0.77704871],\n",
-       "       [0.4046677 , 0.92157934, 0.19399447, 0.10221487]])"
+       "array([[0.00967244, 0.64831184, 0.33252616, 0.35029161],\n",
+       "       [0.47208615, 0.07361926, 0.8614362 , 0.56775698],\n",
+       "       [0.1771404 , 0.38745633, 0.41808485, 0.40363782],\n",
+       "       [0.54171113, 0.46625083, 0.56194795, 0.53811087]])"
       ]
      },
      "execution_count": 7,
@@ -236,10 +236,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.31288483,  1.48250103,  2.49296229,  3.79078805],\n",
-       "       [ 4.83216396,  5.00675913,  6.01794232,  7.10096369],\n",
-       "       [ 8.28389008,  9.79925476, 10.89327217, 11.77704871],\n",
-       "       [12.4046677 , 13.92157934, 14.19399447, 15.10221487]])"
+       "array([[9.67244129e-03, 1.64831184e+00, 2.33252616e+00, 3.35029161e+00],\n",
+       "       [4.47208615e+00, 5.07361926e+00, 6.86143620e+00, 7.56775698e+00],\n",
+       "       [8.17714040e+00, 9.38745633e+00, 1.04180849e+01, 1.14036378e+01],\n",
+       "       [1.25417111e+01, 1.34662508e+01, 1.45619479e+01, 1.55381109e+01]])"
       ]
      },
      "execution_count": 8,
@@ -277,10 +277,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.        ,  0.48250103,  0.98592457,  2.37236415],\n",
-       "       [ 3.32865583,  0.03379564,  0.10765391,  0.70674583],\n",
-       "       [ 2.27112065,  7.19329284,  8.93272168,  8.5475358 ],\n",
-       "       [ 4.8560124 , 11.98053145,  2.71592251,  1.53322305]])"
+       "array([[0.        , 0.64831184, 0.66505233, 1.05087482],\n",
+       "       [1.88834459, 0.3680963 , 5.16861723, 3.97429888],\n",
+       "       [1.41712319, 3.48710696, 4.18084855, 4.44001597],\n",
+       "       [6.50053355, 6.06126083, 7.86727129, 8.07166309]])"
       ]
      },
      "execution_count": 9,
@@ -304,10 +304,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 2.61394722,  4.37000668,  2.38647005,  1.96170572],\n",
-       "       [ 9.94837348, 13.21038372,  8.779155  ,  9.045767  ],\n",
-       "       [17.28279974, 22.05076077, 15.17183996, 16.12982828],\n",
-       "       [24.617226  , 30.89113781, 21.56452491, 23.21388956]])"
+       "array([[ 2.45150033,  2.24728442,  3.38344976,  2.98936523],\n",
+       "       [ 7.25394079,  8.54983747, 12.07943046, 10.42855434],\n",
+       "       [12.05638125, 14.85239053, 20.77541116, 17.86774345],\n",
+       "       [16.85882171, 21.15494359, 29.47139185, 25.30693256]])"
       ]
      },
      "execution_count": 10,
@@ -768,7 +768,6 @@
    "cell_type": "markdown",
    "id": "eb254fe5-6f18-4051-862e-f227900a0c0b",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -804,7 +803,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x71c747ce1850>"
+       "<matplotlib.legend.Legend at 0x7e0ae4792800>"
       ]
      },
      "execution_count": 16,
@@ -930,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "480e4a76-9f9e-4fc0-97d7-cac700faa4a4",
    "metadata": {
     "tags": []
@@ -940,7 +939,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "88.8 μs ± 20.2 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "74.6 μs ± 2.14 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -962,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "55dc71d6-a839-4046-8fc7-d50106e6e38f",
    "metadata": {
     "tags": []
@@ -972,8 +971,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 4.26 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "3.39 μs ± 2.55 μs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "The slowest run took 5.40 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "3.83 μs ± 3.5 μs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -1016,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "e6807c5c-9d1d-4bf8-9793-55f45e9ae33d",
    "metadata": {
     "tags": []
@@ -1045,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "2ccc430e-1d26-4d78-840a-c3648ff84d13",
    "metadata": {
     "tags": []
@@ -1059,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "14c07e5c-6390-4734-a73e-5cb471b39e83",
    "metadata": {
     "tags": []
@@ -1069,7 +1068,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.25 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+      "3.08 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
      ]
     }
    ],
@@ -1081,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "fcf16d2a-362f-4538-9f89-9894be9a34e0",
    "metadata": {
     "tags": []
@@ -1091,7 +1090,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "170 ms ± 1.48 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "170 ms ± 141 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -1101,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "7052449a-2dd1-412e-8eeb-69311100a0cf",
    "metadata": {
     "tags": []
@@ -1111,7 +1110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "74.7 ms ± 915 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "75.5 ms ± 1.26 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -1144,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "1f771a27-ca6c-4f89-a58a-3dbea92e0015",
    "metadata": {
     "tags": []
@@ -1167,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "b5bf61f2-e62f-45be-a1f2-ca016833855e",
    "metadata": {
     "tags": []
@@ -1182,12 +1181,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "b4733df6-a6aa-4972-9ef4-69d604d3cfeb",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.64 ms ± 1.08 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "[0.84947737 1.29048631 1.10367233 ... 1.53112959 0.72425712 0.81064006]\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit func.forall(len(a))(a, b, c)\n",
     "print(c.copy_to_host())"
@@ -1195,13 +1203,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "590c1cde-0d10-4643-bc60-0d4f66ad7d5b",
    "metadata": {
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.64 ms ± 103 ns per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "[0.84947737 1.29048631 1.10367233 ... 1.53112959 0.72425712 0.81064006]\n"
+     ]
+    }
+   ],
    "source": [
     "nthreads = 256  # Enough threads per block for several warps per block\n",
     "nblocks = (len(a) // nthreads) + 1  # Enough blocks to cover entire vector\n",
@@ -1255,12 +1272,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "6e9dc711-dd0b-4c26-a9be-99d57608f019",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using Numpy:  16.881943016134134\n",
+      "Using Cupy:   16.881943016134134\n"
+     ]
+    }
+   ],
    "source": [
     "import cupy as cp\n",
     "import numpy as np\n",
@@ -1289,12 +1315,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "861e6adc-abe2-4553-97a2-f0cb70aab1b2",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time consumed by numpy:  0.5348212718963623\n",
+      "Time consumed by cupy :  0.16929936408996582\n"
+     ]
+    }
+   ],
    "source": [
     "# speed comparison between cupy and numpy\n",
     "\n",
@@ -1323,12 +1358,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "f640996c-69ff-4c6c-a946-6c16f649a258",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  1.,  2.,  3.,  4.],\n",
+       "       [ 5.,  6.,  7.,  8.,  9.],\n",
+       "       [10., 11., 12., 13., 14.],\n",
+       "       [15., 16., 17., 18., 19.],\n",
+       "       [20., 21., 22., 23., 24.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import cupy as cp\n",
     "\n",
@@ -1351,10 +1401,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "27e7a34b-e550-4532-a884-714d6a43b501",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y = cp.zeros((5, 5), dtype=cp.float32)\n",
     "y"
@@ -1362,12 +1427,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "d1573d50-74d6-4dba-9e2c-f49cfa1f2c2c",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  2.,  4.,  6.,  8.],\n",
+       "       [10., 12., 14., 16., 18.],\n",
+       "       [20., 22., 24., 26., 28.],\n",
+       "       [30., 32., 34., 36., 38.],\n",
+       "       [40., 42., 44., 46., 48.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "add_kernel((5,), (5,), (x1, x2, y))  # grid, block and arguments\n",
     "\n",
@@ -1399,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "6e4f986d-ba5e-4022-9136-2875a5098102",
    "metadata": {},
    "outputs": [],
@@ -1413,12 +1493,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "c34591de-1678-4f17-81c1-6e45f0504637",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.5175675  -0.257516   -0.75677353  1.8763617 ]\n",
+      " [ 1.5207194  -0.4681523   0.9198897   1.1434488 ]\n",
+      " [ 0.56602633 -0.9412994  -1.265326    0.28931567]\n",
+      " [-0.52165884 -0.822712   -0.75301474 -0.5751968 ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 2: Transferring data\n",
     "\n",
@@ -1438,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "34b741e9-f8a5-45f4-933b-54ac94e55069",
    "metadata": {},
    "outputs": [],
@@ -1464,10 +1555,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "499403ed-3144-49b4-9d4f-2d32996aae2d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.5175675  -0.257516   -0.75677353  1.8763617 ]\n",
+      " [ 1.5207194  -0.4681523   0.9198897   1.1434488 ]\n",
+      " [ 0.56602633 -0.9412994  -1.265326    0.28931567]\n",
+      " [-0.52165884 -0.822712   -0.75301474 -0.5751968 ]] \n",
+      "\n",
+      " [[ 3.035135   -0.515032   -1.5135471   3.7527235 ]\n",
+      " [ 3.0414388  -0.9363046   1.8397794   2.2868977 ]\n",
+      " [ 1.1320527  -1.8825988  -2.530652    0.57863134]\n",
+      " [-1.0433177  -1.645424   -1.5060295  -1.1503936 ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 4: Transferring data from GPU (device) to CPU (host)\n",
     "\n",
@@ -1479,12 +1586,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "2ca7fa6f-18eb-42dd-8f38-5673ae8bc40e",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.24116784 -0.5703912   0.8994447  -0.0712574 ]\n",
+      " [-0.9725065   0.44660795 -0.27463588  0.23193799]\n",
+      " [ 0.28120583  1.1501592   1.5640221  -1.6654408 ]\n",
+      " [ 0.6329049   1.5537844  -0.04895584  0.08967403]] \n",
+      "\n",
+      " [[ 0.4823357  -1.1407824   1.7988894  -0.1425148 ]\n",
+      " [-1.945013    0.8932159  -0.54927176  0.46387598]\n",
+      " [ 0.56241167  2.3003185   3.1280441  -3.3308816 ]\n",
+      " [ 1.2658098   3.1075687  -0.09791169  0.17934807]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Bonus: Abstracting Away the Complications\n",
     "# Using a pycuda.gpuarray to achieve the same effect with less writing\n",
@@ -1496,6 +1619,14 @@
     "\n",
     "print(mx_gpu, \"\\n\\n\", mx_doubled)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b136511-b4e4-4a67-8174-002ba26adf94",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1514,7 +1645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
